--- a/.github/workflows/trigger-job.yml
+++ b/.github/workflows/trigger-job.yml
@@ -15,9 +15,9 @@ jobs:
 
     - name: Trigger Jenkins Pipeline Job
       env:
-        JENKINS_URL: ${{ secrets.JENKINS_URL }}
-        JENKINS_USER: ${{ secrets.JENKINS_USER }}
-        JENKINS_TOKEN: ${{ secrets.JENKINS_TOKEN }}
+        JENKINS_URL: ${{ env.JENKINS_URL }}
+        JENKINS_USER: ${{ env.JENKINS_USER }}
+        JENKINS_TOKEN: ${{ env.JENKINS_TOKEN }}
       run: |
-        curl -X POST "${{ secrets.JENKINS_URL }}/job/<JOB_NAME>/build" \
-        --user "${{ secrets.JENKINS_USER }}:${{ secrets.JENKINS_TOKEN }}"
+        curl -X POST "${{ env.JENKINS_URL }}/job/flask" \
+        --user "${{ env.JENKINS_USER }}:${{ env.JENKINS_TOKEN }}"
