--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 Flask==2.2.2
 Flask-SQLAlchemy==3.0.3
-flask_swagger_ui==3.25.0
-psycopg2-binary==2.9.5
+Werkzeug==2.2.2
+#flask_swagger_ui==3.25.0
+#sycopg2-binary==2.9.5
+#unicorn==22.0.0
+
